syntax = "proto3";

option go_package = "pb";

package chatpb;

message Channel {
  string name = 1;
  string senders_name = 2;
}

message Message {
  string sender = 1;
  Channel channel = 2;
  string message = 3;
}

message MessageAck {
  string status = 1;
}

service ChatService {
  rpc JoinChannel(Channel) returns (stream Message) {}
  rpc SendMessage(stream Message) returns (MessageAck) {}
}
